[tool.poetry]
name = "flappy-bird"
version = "1.0.0"
description = ""
authors = ["Cole Juracek <therealjuracek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "isort"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
