[tool.poetry]
name = "flappy-bird"
version = "1.0.0"
description = "Flappy bird-like game for manual play or with reinforcement learning"
authors = ["Cole Juracek <therealjuracek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
